# ParaCL

./: .clang-format  .gitignore  0_err.cl.ll  1_fgt_scolon.cl.ll  CMakeLists.txt  Doxyfile  INode.hh  Makefile  README.md  Symtab.hh  compiler.y  driver.cc  driver.hh  format.md  format.py  main.cc  pcl_std.cc  scanner.l  test.cc  test_make.sh
AST/: INode.cc  INode.hh  Interp.cc  Interp.hh  Node.cc  Node.hh  OPNode.cc  OPNode.hh  Symtab.hh
CLI/: CLI.cc  CLI.hh
Driver/: driver.cc  driver.hh
dev_doc/: lit_testing.md
docs/: Doxyfile
driver/: driver.cc  driver.hh
flex+bison/: compiler.y  scanner.l
grammar/: compiler.y  compiler_new.y  scanner.l
parser/: parser.cc  parser.hh
test/: 10_mul_com.cl  11_branch.cl  12_scope_expr.cl  13_scope.cl  14_putc.cl  15_hello_world.cl  1_comment.cl  2_if_n_print.cl  3_if.cl  3_if_min.cl  4_pm_chain.cl  5_scan_expr.cl  6_unary.ans  6_unary.cl  7_logical.ans  7_logical.cl  8_fact.cl  9_fib.cl  lit.cfg.py
test/err_tests/: 0_err.cl  1_fgt_scolon.cl  2_extra_op.cl  3_scan_tst.cl  4_unknown_var.cl  5_unknwn_op.cl  6_rvalue_assign.cl  7_div_zero.cl  8_mod_zero.cl  9_comm.cl
tst/: 10_mul_com.cl  1_comment.cl  3_if_min.cl  4_pm_chain.cl  6_unary.ans  6_unary.cl  9_fib.cl
tst/err_tests/: 0_err.cl  1_fgt_scolon.cl  2_extra_op.cl  3_scan_tst.cl  5_unknwn_op.cl  8_mod_zero.cl  9_comm.cl
